[Alli 5581] Fix small images not showing on record page (#1091)

--- a/themes/finna2/less/finna/record.less
+++ b/themes/finna2/less/finna/record.less
@@ -112,6 +112,12 @@
   }
 }
 
+@media(max-width: @screen-xs-max){
+  .truncate-field.recordcovers {
+    display: inline-block;
+  }
+}
+
 .record .record-title {
   margin: 0;
   margin-bottom: 3px;
